2019-08-02 Magnus Hagdorn
 * piccolo3/client/PiccoloScheduler.py: add functionality to get list of jobs

2019-07-30 Magnus Hagdorn
 * piccolo3/client/__init__.py: setup piccolo scheduler
 * piccolo3/client/PiccoloScheduler.py: add new module to handle piccolo
   scheduler

2019-05-17 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: observe spectrometer status

2019-04-24 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: pass target saturation as argument

2019-04-24 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add methods to handle numSequences,
   autointegration, delay and target settings; make all arguments to
   record_sequence and record_dark optional
 * piccolo3/client/PiccoloDataDir.py: handle updates to current_run

2019-04-23 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add method to abort acquisition

2019-04-22 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add method to pause server

2019-04-22 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add extra keyword arguments to schedule a
   sequence run
 * setup.py: install new script
 * piccolo3/precord.py: add script to run piccolo sequences from the command
   line

2019-04-17 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add method to start autointegration
 * piccolo3/client/PiccoloSpectrometer.py: add methods to handle
   autointegration status
 * setup.py: require correct package

2019-03-29 Magnus Hagdorn
 * piccolo3/client/PiccoloDataDir.py: add methods to get list of runs; list of
   spectra and to get spectra

2019-03-27 Magnus Hagdorn
 * piccolo3/client/PiccoloDataDir.py: fix bug

2019-03-27 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: observe changes of status
 * piccolo3/client/__init__.py: gather all piccolo client objects into a
   single object

2019-03-26 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: expose list of spectrometers and
 channels; add callback to get notifications when a value changed
 * piccolo3/client/PiccoloSysinfo.py: tidy up

2019-03-25 Magnus Hagdorn