@@ -1,4 +1,8 @@
 2019-08-02 Magnus Hagdorn
+ * piccolo3/client/PiccoloScheduler.py: add functionality to
+   suspend/unsuspend/delete jobs
+
+2019-08-02 Magnus Hagdorn
  * piccolo3/client/PiccoloScheduler.py: add functionality to get list of jobs
 
 2019-07-30 Magnus Hagdorn
